// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vote For Delegate should render 1`] = `
<DocumentFragment>
  <div
    class="max-w-xl mx-auto"
  >
    <form
      class="space-y-6"
      data-testid="Form"
    >
      <div>
        <ul
          class="StepIndicator___StyledUl-sc-15t41is-1 dhAbBb"
        >
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 crUtTP"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
        </ul>
        <div
          class="mt-10"
        >
          <div
            data-testid="tab-pabel__active-panel"
          >
            <section
              class="space-y-8"
              data-testid="TransactionSendIPFS__step--first"
            >
              <div>
                <h1
                  class="mb-0"
                >
                  IPFS
                </h1>
                <p
                  class="text-theme-neutral-dark"
                >
                  Store an IPFS hasn on the network
                </p>
              </div>
              <div
                class="grid grid-flow-row gap-2"
              >
                <div
                  class="flex items-center py-4 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Network
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="sc-AxmLO kuiknc"
                      >
                        <select
                          class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary pr-12"
                          data-testid="Select"
                        >
                          <option
                            value="ARK Ecosystem"
                          >
                            ARK Ecosystem
                          </option>
                        </select>
                        <div
                          class="sc-AxgMl sc-Axmtr cPxyjO w-12 text-lg pointer-events-none text-theme-neutral-dark"
                        >
                          <div
                            class="sc-AxhCb fxrKLH"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-4 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Sender
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="relative flex items-center"
                      >
                        <input
                          class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
                          data-testid="Input"
                          disabled=""
                          type="text"
                        />
                        <div
                          class="absolute flex items-center ml-3"
                        >
                          <div
                            class="sc-AxirZ kSZulD mr-3"
                          />
                          <div
                            class="inline-block truncate"
                          >
                            <span
                              class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
                              data-testid="address__wallet-name"
                            >
                              ROBank
                            </span>
                            <span
                              class="text-theme-neutral-400 font-semibold text-base"
                              data-testid="address__wallet-address"
                            >
                              AUexKj...EVTQWK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-4 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Hash
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <input
                        class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
                        data-testid="Input"
                        name="hash"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-4 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-semibold text-theme-neutral-500"
                    >
                      Fee ARK
                    </div>
                    <div
                      class="mt-2 font-semibold"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="w-3/5 mr-2"
                        >
                          <div
                            class="sc-AxmLO kuiknc"
                          >
                            <input
                              class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
                              data-testid="InputCurrency"
                              type="text"
                              value="25"
                            />
                            <div
                              class="absolute bottom-0 w-full px-1"
                            >
                              <div
                                class="flex flex-wrap justify-center"
                                data-testid="Range"
                              >
                                <div
                                  class="sc-fzozJi cRbOfl"
                                  data-testid="Range__track"
                                  style="transform: scale(1); cursor: pointer;"
                                >
                                  <div
                                    class="sc-fzoLsD ckpTMK"
                                    data-testid="Range__track__filled"
                                  >
                                    <div
                                      aria-valuemax="100"
                                      aria-valuemin="1"
                                      aria-valuenow="25"
                                      class="sc-fzpans dtzHyc"
                                      data-testid="Range__thumb"
                                      draggable="false"
                                      role="slider"
                                      style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ml-2"
                        >
                          <div
                            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                            data-testid="SelectionBar"
                            role="radiogroup"
                          >
                            <button
                              aria-checked="true"
                              class="sc-fzplWN hMcnEd relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Last
                            </button>
                            <button
                              aria-checked="false"
                              class="sc-fzplWN hMcnEd relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Min
                            </button>
                            <button
                              aria-checked="false"
                              class="sc-fzplWN hMcnEd relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Average
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="flex justify-start mt-6 space-x-2"
          >
            <button
              class="sc-AxjAm hQuXai"
              color="primary"
              data-testid="TransactionSendIPFS__button--back"
              disabled=""
              type="button"
            >
              Back
            </button>
            <button
              class="sc-AxjAm iueUfM"
              color="primary"
              data-testid="TransactionSendIPFS__button--continue"
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Vote For Delegate should render 1st step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSendIPFS__step--first"
  >
    <div>
      <h1
        class="mb-0"
      >
        IPFS
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Store an IPFS hasn on the network
      </p>
    </div>
    <div
      class="grid grid-flow-row gap-2"
    >
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Network
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="sc-AxmLO kuiknc"
            >
              <select
                class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary pr-12"
                data-testid="Select"
              >
                <option
                  value="ARK Ecosystem"
                >
                  ARK Ecosystem
                </option>
              </select>
              <div
                class="sc-AxgMl sc-Axmtr cPxyjO w-12 text-lg pointer-events-none text-theme-neutral-dark"
              >
                <div
                  class="sc-AxhCb fxrKLH"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Sender
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="relative flex items-center"
            >
              <input
                class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
                data-testid="Input"
                disabled=""
                type="text"
              />
              <div
                class="absolute flex items-center ml-3"
              >
                <div
                  class="sc-AxirZ kSZulD mr-3"
                />
                <div
                  class="inline-block truncate"
                >
                  <span
                    class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
                    data-testid="address__wallet-name"
                  >
                    ROBank
                  </span>
                  <span
                    class="text-theme-neutral-400 font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    AUexKj...EVTQWK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Hash
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <input
              class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
              data-testid="Input"
              name="hash"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Fee ARK
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="flex"
            >
              <div
                class="w-3/5 mr-2"
              >
                <div
                  class="sc-AxmLO kuiknc"
                >
                  <input
                    class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
                    data-testid="InputCurrency"
                    type="text"
                    value="25"
                  />
                  <div
                    class="absolute bottom-0 w-full px-1"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="sc-fzozJi cRbOfl"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="sc-fzoLsD ckpTMK"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="1"
                            aria-valuenow="25"
                            class="sc-fzpans dtzHyc"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ml-2"
              >
                <div
                  class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                  data-testid="SelectionBar"
                  role="radiogroup"
                >
                  <button
                    aria-checked="true"
                    class="sc-fzplWN hMcnEd relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Last
                  </button>
                  <button
                    aria-checked="false"
                    class="sc-fzplWN hMcnEd relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Min
                  </button>
                  <button
                    aria-checked="false"
                    class="sc-fzplWN hMcnEd relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Average
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Vote For Delegate should render 2nd step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSendIPFS__step--second"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Review
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Check the information again before voting
      </p>
    </div>
    <div
      class="grid grid-flow-row gap-2"
    >
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Network
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <span>
              ARK Ecosystem
            </span>
          </div>
        </div>
        <div
          class="ml-1 text-theme-danger-500"
        >
          <div
            class="sc-AxirZ cZokSJ bg-theme-background border-theme-danger-200"
          >
            <div
              class="sc-AxhCb VoPpj"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Sender
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="inline-block truncate"
            >
              <span
                class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
                data-testid="address__wallet-name"
              >
                ROBank
              </span>
              <span
                class="text-theme-neutral-400 font-semibold text-base"
                data-testid="address__wallet-address"
              >
                AUexKj...EVTQWK
              </span>
            </div>
          </div>
        </div>
        <div>
          <div
            class="sc-AxirZ hTKBId"
          />
        </div>
      </div>
      <div
        class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Recipient
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <span
              class="font-normal"
            >
              AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK
            </span>
          </div>
        </div>
        <div>
          <div
            class="sc-AxirZ hTKBId"
          />
        </div>
      </div>
      <div
        class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Hash
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <span
              class="font-normal"
            >
              QmceNpwJqQm7vXUivbQeeQYeGr1ivT1VDRPaWK9Pf
            </span>
          </div>
        </div>
        <div
          class="ml-1"
        >
          <div
            class="sc-AxirZ cZokSJ bg-theme-background border-black"
          >
            <div
              class="sc-AxhCb hSzyfb"
              height="23"
              width="23"
            >
              <svg>
                ipfs.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Transaction fee
          </div>
          <div
            class="mt-2 font-semibold"
          >
            0.09660435 ARK
          </div>
        </div>
      </div>
      <div
        class="border border-theme-neutral-300 rounded-lg"
      >
        <div
          class="relative p-3"
        >
          <div
            class="grid grid-cols-2 divide-x divide-gray-400"
          >
            <div
              class="flex flex-col justify-center px-6 py-5"
            >
              <span
                class="text-sm text-theme-neutral-500"
              >
                Transaction(s) Amount
              </span>
              <span
                class="mt-3"
                data-testid="total-amount-box__transaction-amount"
              >
                 ARK
              </span>
            </div>
            <div
              class="flex flex-col justify-center text-right px-6 py-5"
            >
              <span
                class="text-sm text-theme-neutral-500"
              >
                Transaction fee
              </span>
              <span
                class="mt-3 mr-2"
                data-testid="total-amount-box__transaction-fee"
              >
                 ARK
              </span>
            </div>
          </div>
          <div
            class="absolute flex items-center justify-center h-full top-0 bottom-0 left-0 right-0 text-center"
          >
            <div
              class="bg-white px-1 py-2"
            >
              <div
                class="sc-AxhCb cMyoID"
                height="15"
                width="15"
              >
                <svg>
                  plus.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="border-t border-theme-neutral-300 rounded-b-lg flex flex-col justfiy-center items-center py-7 bg-theme-neutral-100"
        >
          <span
            class="text-sm text-theme-neutral-500"
          >
            Total Amount
          </span>
          <span
            class="font-bold text-2xl"
            data-testid="total-amount-box__total"
          >
            NaN ARK
          </span>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Vote For Delegate should render 3rd step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSendIPFS__step--third"
  >
    <div>
      <h1
        class="mb-0"
      >
        Passphrase
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Confirm your password to continue
      </p>
      <div
        class="grid grid-flow-row gap-2"
      >
        <div
          class="flex items-center py-4 true "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Your password
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="sc-AxmLO kuiknc max-w-20"
              >
                <input
                  class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary pr-12"
                  data-testid="Input"
                  name="passphras"
                  type="password"
                />
                <div
                  class="sc-AxgMl sc-Axmtr cPxyjO mr-4"
                >
                  <button
                    class="flex items-center justify-center w-full h-full text-2xl focus:outline-none bg-theme-background text-theme-primary-400"
                    data-testid="InputPassword__toggle"
                    type="button"
                  >
                    <div
                      class="sc-AxhCb fxrKLH"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        eye.svg
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Vote For Delegate should render 4th step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSendIPFS__step--fourth"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Successful
      </h1>
      <div
        class="grid grid-flow-row gap-2"
      >
        <div
          class="w-full mt-10"
        >
          <div
            class="sc-AxhCb iOlwQd"
            height="200"
            width="100%"
          >
            <svg>
              transaction_successful.svg
            </svg>
          </div>
        </div>
        <p
          class="text-theme-neutral-dark"
        >
          Your transaction was successfully sent. Please monitor the blockchain to ensure your transactions is confirmed and processed, The following is relevant information for your transaction.
        </p>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__inner"
                >
                  <div
                    class="inline-block truncate"
                  >
                    <span
                      class="text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz...MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <textarea
                  class="Clipboard__TextArea-sc-1atoaua-0 hhPnzN"
                  data-testid="clipboard__textarea"
                  readonly=""
                >
                  AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWKAUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK
                </textarea>
                <div
                  class="text-theme-primary-300 ml-5 mb-1"
                >
                  <div
                    class="sc-AxhCb fxrKLH"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Block ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__inner"
                >
                  <div
                    class="inline-block truncate"
                  >
                    <span
                      class="text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz...MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <textarea
                  class="Clipboard__TextArea-sc-1atoaua-0 hhPnzN"
                  data-testid="clipboard__textarea"
                  readonly=""
                >
                  AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWKAUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK
                </textarea>
                <div
                  class="text-theme-primary-300 ml-5 mb-1"
                >
                  <div
                    class="sc-AxhCb fxrKLH"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Network
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <span>
                ARK Ecosystem
              </span>
            </div>
          </div>
          <div
            class="ml-1 text-theme-danger-500"
          >
            <div
              class="sc-AxirZ cZokSJ bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhCb VoPpj"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Sender
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
                  data-testid="address__wallet-name"
                >
                  ROBank
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AUexKj...EVTQWK
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="sc-AxirZ efFWdY"
            />
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              IPFS Hash
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <span
                class="font-normal"
              >
                QmceNpwJqQm7vXUivbQeeQYeGr1ivT1VDRPaWK9Pf
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Amount
            </div>
            <div
              class="mt-2 font-semibold"
            >
              1.00 ARK
            </div>
          </div>
          <div
            class="ml-1 text-theme-danger"
          >
            <div
              class="sc-AxirZ cZokSJ bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhCb liaKlj"
                height="50"
                width="50"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
